--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        -->
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -59,6 +67,7 @@
             <version>1.18.34</version>
             <scope>provided</scope>
         </dependency>
+
 		<!-- Spring Oauth-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
